Fixed some issues with database interface method signatures. Added location to remote reader. Added code to convert a RemoteRead to a ChipRead for saving to the database. Renamed the RemoteReaders window to RemoteReadersWindow.

--- a/ChronoKeep/UI/Timing/RewindWindow.xaml
+++ b/ChronoKeep/UI/Timing/RewindWindow.xaml
@@ -23,7 +23,7 @@
             Grid.Row="0">
         </ui:TitleBar>
         <xctf:BusyIndicator Name="busyIndicator" Grid.Row="1">
-            <StackPanel VerticalAlignment="Top" Margin="10,10,10,10">
+            <StackPanel VerticalAlignment="Top" Margin="10,10,10,10" Grid.Row="1">
                 <TextBlock Text="Rewind" FontSize="18" TextAlignment="Center" VerticalAlignment="Center"/>
                 <Grid>
                     <Grid.ColumnDefinitions>
