Fixed a couple of comment spelling mistakes. Removed some unnecessary code from the api controller. Added download interval setting. Changed settings ui for modifying intervals/windows from comboboxes to sliders. Added IMainWindow methods for stopping, starting, and checking some values from the remote controller. Added methods to get information from a remote api to the APIObject. Added switch to start/stop remote readers from the timing page. Added code for RemoteController for pulling information from the remote api.

--- a/ChronoKeep/UI/MainPages/DashboardPage.xaml
+++ b/ChronoKeep/UI/MainPages/DashboardPage.xaml
@@ -149,7 +149,7 @@
             >
             <Button
                 Name="apiPageButton"
-                Content="Manage Results API"
+                Content="Manage API"
                 Margin="0,0,0,5"
                 Click="apiPageButton_Click"
                 FontSize="16"
