--- a/ChronoKeep/UI/API/RemoteReadersWindow.xaml
+++ b/ChronoKeep/UI/API/RemoteReadersWindow.xaml
@@ -33,7 +33,7 @@
             </StackPanel>
             <ListView x:Name="apiListView" Visibility="Collapsed" />
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button x:Name="Close" Content="Close" Click="Close_Click" Height="35" Width="150" Margin="5,5,5,5" />
+                <Button x:Name="CloseButton" Content="Close" Click="Close_Click" Height="35" Width="150" Margin="5,5,5,5" />
             </StackPanel>
         </StackPanel>
     </Grid>
