--- a/ChronoKeep/UI/MainPages/SettingsPage.xaml
+++ b/ChronoKeep/UI/MainPages/SettingsPage.xaml
@@ -83,14 +83,36 @@
                     <TextBox Name="DefaultExportDirBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" IsEnabled="False" Grid.Column="1"/>
                     <Button Name="ChangeExport" FontSize="14" Height="35" Margin="0,10,10,10" HorizontalAlignment="Stretch" Grid.Column="2" Content="Change" Click="ChangeExport_Click"/>
                 </Grid>
-                <DockPanel>
-                    <TextBlock Text="Upload Interval" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" />
-                    <ComboBox Name="UploadIntervalBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
-                </DockPanel>
-                <DockPanel>
+                <Grid Height="55">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="190" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="40" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Upload Interval" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" Grid.Column="0"/>
+                    <Slider x:Name="uploadSlider" IsSnapToTickEnabled="True" TickFrequency="1" Minimum="1" Maximum="60" ValueChanged="uploadSlider_ValueChanged" VerticalAlignment="Center" HorizontalAlignment="Stretch" Grid.Column="1" Margin="0,0,10,0"/>
+                    <TextBlock FontSize="14" x:Name="uploadBlock" Width="30" Margin="0,10,10,10" VerticalAlignment="Center" Grid.Column="2" HorizontalAlignment="Center" TextAlignment="Center"/>
+                </Grid>
+                <Grid Height="55">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="190" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="40" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Download Interval" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" />
+                    <Slider x:Name="downloadSlider" IsSnapToTickEnabled="True" TickFrequency="1" Minimum="1" Maximum="60" ValueChanged="downloadSlider_ValueChanged" VerticalAlignment="Center" HorizontalAlignment="Stretch" Grid.Column="1" Margin="0,0,10,0"/>
+                    <TextBlock FontSize="14" x:Name="downloadBlock" Width="30" Margin="0,10,10,10" VerticalAlignment="Center" Grid.Column="2" HorizontalAlignment="Center" TextAlignment="Center"/>
+                </Grid>
+                <Grid Height="55">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="190" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="40" />
+                    </Grid.ColumnDefinitions>
                     <TextBlock Text="Announcer Window" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" />
-                    <ComboBox Name="AnnouncerWindowBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
-                </DockPanel>
+                    <Slider x:Name="announcerSlider" IsSnapToTickEnabled="True" TickFrequency="1" Minimum="1" Maximum="60" ValueChanged="announcerSlider_ValueChanged" VerticalAlignment="Center" HorizontalAlignment="Stretch" Grid.Column="1" Margin="0,0,10,0"/>
+                    <TextBlock FontSize="14" x:Name="announcerBlock" Width="30" Margin="0,10,10,10" VerticalAlignment="Center" Grid.Column="2" HorizontalAlignment="Center" TextAlignment="Center"/>
+                </Grid>
                 <DockPanel>
                     <TextBlock Text="Alarm Sound" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" />
                     <Button Content="Play" Height="35" Width="50" Name="PlayBtn" Click="PlayBtn_Click"  FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center"/>
