Small ui tweaks. Fixed an issue with parsing the GetReadersResponse. UI for the remotereaderswindow looks alright now.

--- a/ChronoKeep/UI/API/RemoteReadersWindow.xaml
+++ b/ChronoKeep/UI/API/RemoteReadersWindow.xaml
@@ -12,8 +12,8 @@
         WindowBackdropType="Mica"
         WindowCornerPreference="Round"
         WindowStartupLocation="CenterScreen"
-        Height="450"
-        Width="800"
+        Height="215"
+        Width="340"
         ResizeMode="NoResize"
         SizeToContent="WidthAndHeight"
         Closed="UiWindow_Closed"
@@ -24,16 +24,17 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <ui:TitleBar
+            x:Name="titleBar"
             Grid.Row="0">
         </ui:TitleBar>
         <StackPanel Grid.Row="1">
-            <StackPanel x:Name="loadingPanel" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="20,0,20,0">
-                <TextBlock Text="Loading..." FontSize="36" Margin="5,5,5,5"/>
+            <StackPanel x:Name="loadingPanel" Width="300" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="20,20,10,20">
+                <TextBlock Text="Loading..." FontSize="36" Margin="5,5,5,5" TextAlignment="Center"/>
                 <ui:ProgressRing IsIndeterminate="True" Margin="5,5,5,5"/>
             </StackPanel>
-            <ListView x:Name="apiListView" Visibility="Collapsed" />
+            <ListView x:Name="apiListView" Visibility="Collapsed" Margin="10,0,10,10"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button x:Name="CloseButton" Content="Close" Click="Close_Click" Height="35" Width="150" Margin="5,5,5,5" />
+                <Button x:Name="CloseButton" Content="Close" Click="Close_Click" Height="35" Width="150" HorizontalAlignment="Center" Margin="20,0,10,20" />
             </StackPanel>
         </StackPanel>
     </Grid>
