--- a/ChronoKeep/UI/MainPages/SettingsPage.xaml
+++ b/ChronoKeep/UI/MainPages/SettingsPage.xaml
@@ -117,11 +117,17 @@
                     <TextBlock Text="Alarm Sound" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" />
                     <Button Content="Play" Height="35" Width="50" Name="PlayBtn" Click="PlayBtn_Click"  FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center"/>
                     <ComboBox Name="AlarmSoundBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center">
-                        <ComboBoxItem Content="Sound 1" Uid="1" IsSelected="True"/>
-                        <ComboBoxItem Content="Sound 2" Uid="2"/>
-                        <ComboBoxItem Content="Sound 3" Uid="3"/>
-                        <ComboBoxItem Content="Sound 4" Uid="4"/>
-                        <ComboBoxItem Content="Sound 5" Uid="5"/>
+                        <ComboBoxItem Content="Alert 1" Uid="1" IsSelected="True"/>
+                        <ComboBoxItem Content="Alert 2" Uid="2"/>
+                        <ComboBoxItem Content="Alert 3" Uid="3"/>
+                        <ComboBoxItem Content="Alert 4" Uid="4"/>
+                        <ComboBoxItem Content="Alert 5" Uid="5"/>
+                        <ComboBoxItem Content="Emily 1" Uid="6"/>
+                        <ComboBoxItem Content="Emily 2" Uid="7"/>
+                        <ComboBoxItem Content="Emily 3" Uid="8"/>
+                        <ComboBoxItem Content="Michael 1" Uid="9"/>
+                        <ComboBoxItem Content="Michael 2" Uid="10"/>
+                        <ComboBoxItem Content="Michael 3" Uid="11"/>
                     </ComboBox>
                 </DockPanel>
             </StackPanel>
