--- a/ChronoKeep/UI/Timing/ReaderSettings/ChronokeepSettings.xaml
+++ b/ChronoKeep/UI/Timing/ReaderSettings/ChronokeepSettings.xaml
@@ -33,11 +33,8 @@
             Margin="20,10,20,20"
             VerticalAlignment="Center"
             >
-            <StackPanel x:Name="loadingPanel" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="20,0,20,0">
-                <TextBlock Text="Loading..." FontSize="36" Margin="5,5,5,5"/>
-                <ui:ProgressRing IsIndeterminate="True" Margin="5,5,5,5"/>
-            </StackPanel>
-            <StackPanel x:Name="settingsPanel" Visibility="Collapsed" Margin="0,10,0,0">
+            <StackPanel x:Name="sacrifice" Margin="1,1,1,1" Height="1" />
+            <StackPanel x:Name="settingsPanel" Visibility="Hidden" Margin="0,10,0,0">
                 <StackPanel Orientation="Horizontal">
                     <TextBlock
                         Text="Name"
