--- a/ChronoKeep/UI/Timing/ReaderSettings/RFIDSettings.xaml
+++ b/ChronoKeep/UI/Timing/ReaderSettings/RFIDSettings.xaml
@@ -30,11 +30,8 @@
             Grid.Row="1"
             Margin="20,10,20,20"
             >
-            <StackPanel x:Name="loadingPanel" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="20,0,20,0">
-                <TextBlock Text="Loading..." FontSize="36" Margin="5,5,5,5"/>
-                <ui:ProgressRing IsIndeterminate="True" Margin="5,5,5,5"/>
-            </StackPanel>
-            <StackPanel x:Name="settingsPanel" Visibility="Collapsed" Margin="0,10,0,0">
+            <StackPanel x:Name="sacrifice" Visibility="Hidden" Margin="1,1,1,1" Height="1" />
+            <StackPanel x:Name="settingsPanel" Visibility="Hidden" Margin="0,10,0,0">
                 <StackPanel
                 Orientation="Horizontal"
                 Height="45"
