Attempting to update UI slowly to the new release of WPF-UI.

--- a/ChronoKeep/UI/Announcer/AnnouncerWindow.xaml
+++ b/ChronoKeep/UI/Announcer/AnnouncerWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiWindow
+﻿<ui:FluentWindow
         x:Class="Chronokeep.UI.Announcer.AnnouncerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -123,4 +123,4 @@
             </ListView.ItemTemplate>
         </ListView>
     </Grid>
-</ui:UiWindow>
+</ui:FluentWindow>
