--- a/ChronoKeep/UI/MainPages/APIPage.xaml
+++ b/ChronoKeep/UI/MainPages/APIPage.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiPage x:Class="Chronokeep.UI.MainPages.APIPage"
+﻿<Page x:Class="Chronokeep.UI.MainPages.APIPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -31,4 +31,4 @@
             </DockPanel>
         </Grid>
     </Grid>
-</ui:UiPage>
+</Page>
