--- a/ChronoKeep/UI/MainPages/DistancesPage.xaml
+++ b/ChronoKeep/UI/MainPages/DistancesPage.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiPage x:Class="Chronokeep.UI.MainPages.DistancesPage"
+﻿<Page x:Class="Chronokeep.UI.MainPages.DistancesPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -30,4 +30,4 @@
             </DockPanel>
         </Grid>
     </Grid>
-</ui:UiPage>
+</Page>
