--- a/ChronoKeep/UI/API/APIErrorPage.xaml
+++ b/ChronoKeep/UI/API/APIErrorPage.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiPage x:Class="Chronokeep.UI.API.APIErrorPage"
+﻿<Page x:Class="Chronokeep.UI.API.APIErrorPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -11,4 +11,4 @@
     <Grid>
         <TextBlock Name="errorLabel" Text="Error, unable to continue." TextWrapping="Wrap" MaxWidth="250" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </Grid>
-</ui:UiPage>
+</Page>
