--- a/ChronoKeep/UI/API/APIPage1.xaml
+++ b/ChronoKeep/UI/API/APIPage1.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiPage x:Class="Chronokeep.UI.API.APIPage1"
+﻿<Page x:Class="Chronokeep.UI.API.APIPage1"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -18,4 +18,4 @@
             <Button Content="Cancel" Height="35" Width="120" HorizontalAlignment="Center" Margin="10,0,0,10" Click="Cancel_Click" Grid.Column="1"/>
         </DockPanel>
     </StackPanel>
-</ui:UiPage>
+</Page>
