--- a/ChronoKeep/UI/API/APIPage2.xaml
+++ b/ChronoKeep/UI/API/APIPage2.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiPage x:Class="Chronokeep.UI.API.APIPage2"
+﻿<Page x:Class="Chronokeep.UI.API.APIPage2"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -138,4 +138,4 @@
                 />
         </StackPanel>
     </StackPanel>
-</ui:UiPage>
+</Page>
