--- a/ChronoKeep/UI/API/APIWindow.xaml
+++ b/ChronoKeep/UI/API/APIWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiWindow x:Class="Chronokeep.UI.API.APIWindow"
+﻿<ui:FluentWindow x:Class="Chronokeep.UI.API.APIWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -26,4 +26,4 @@
             <Frame x:Name="APIFrame" NavigationUIVisibility="Hidden" IsTabStop="False" />
         </Grid>
     </Grid>
-</ui:UiWindow>
+</ui:FluentWindow>
