--- a/ChronoKeep/UI/API/RemoteReadersWindow.xaml
+++ b/ChronoKeep/UI/API/RemoteReadersWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiWindow x:Class="Chronokeep.UI.API.RemoteReadersWindow"
+﻿<ui:FluentWindow x:Class="Chronokeep.UI.API.RemoteReadersWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -16,7 +16,7 @@
         Width="340"
         ResizeMode="NoResize"
         SizeToContent="WidthAndHeight"
-        Closed="UiWindow_Closed"
+        Closed="Window_Closed"
         >
     <Grid>
         <Grid.RowDefinitions>
@@ -38,4 +38,4 @@
             </StackPanel>
         </StackPanel>
     </Grid>
-</ui:UiWindow>
+</ui:FluentWindow>
