--- a/ChronoKeep/UI/ChipAssignment/BibChipAssociationWindow.xaml
+++ b/ChronoKeep/UI/ChipAssignment/BibChipAssociationWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiWindow x:Class="Chronokeep.BibChipAssociationWindow"
+﻿<ui:FluentWindow x:Class="Chronokeep.BibChipAssociationWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -104,4 +104,4 @@
             </StackPanel>
         </Grid>
     </Grid>
-</ui:UiWindow>
+</ui:FluentWindow>
