--- a/ChronoKeep/UI/ChipAssignment/ChipTool.xaml
+++ b/ChronoKeep/UI/ChipAssignment/ChipTool.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiWindow x:Class="Chronokeep.UI.ChipAssignment.ChipTool"
+﻿<ui:FluentWindow x:Class="Chronokeep.UI.ChipAssignment.ChipTool"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -64,4 +64,4 @@
             </Grid>
         </Grid>
     </Grid>
-</ui:UiWindow>
+</ui:FluentWindow>
