--- a/ChronoKeep/UI/EventWindows/NewEventWindow.xaml
+++ b/ChronoKeep/UI/EventWindows/NewEventWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiWindow x:Class="Chronokeep.NewEventWindow"
+﻿<ui:FluentWindow x:Class="Chronokeep.NewEventWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -46,4 +46,4 @@
             </StackPanel>
         </StackPanel>
     </Grid>
-</ui:UiWindow>
+</ui:FluentWindow>
