--- a/ChronoKeep/UI/Export/ExportDistanceResults.xaml
+++ b/ChronoKeep/UI/Export/ExportDistanceResults.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiWindow x:Class="Chronokeep.UI.Export.ExportDistanceResults"
+﻿<ui:FluentWindow x:Class="Chronokeep.UI.Export.ExportDistanceResults"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -42,4 +42,4 @@
             </Grid>
         </Grid>
     </Grid>
-</ui:UiWindow>
+</ui:FluentWindow>
