--- a/ChronoKeep/UI/Import/ImportFilePage1.xaml
+++ b/ChronoKeep/UI/Import/ImportFilePage1.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiPage x:Class="Chronokeep.ImportFilePage1"
+﻿<Page x:Class="Chronokeep.ImportFilePage1"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -17,4 +17,4 @@
             </ListBox.ItemContainerStyle>
         </ListBox>
     </Grid>
-</ui:UiPage>
+</Page>
