--- a/ChronoKeep/UI/Import/ImportFilePageConflicts.xaml
+++ b/ChronoKeep/UI/Import/ImportFilePageConflicts.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiPage x:Class="Chronokeep.UI.Import.ImportFilePageConflicts"
+﻿<Page x:Class="Chronokeep.UI.Import.ImportFilePageConflicts"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -42,4 +42,4 @@
             </ListBox.ItemContainerStyle>
         </ListBox>
     </Grid>
-</ui:UiPage>
+</Page>
