--- a/ChronoKeep/UI/Import/ImportFileWindow.xaml
+++ b/ChronoKeep/UI/Import/ImportFileWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiWindow x:Class="Chronokeep.ImportFileWindow"
+﻿<ui:FluentWindow x:Class="Chronokeep.ImportFileWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -47,4 +47,4 @@
             <Frame x:Name="Frame"  NavigationUIVisibility="Hidden" IsTabStop="False" Grid.Row="1"/>
         </Grid>
     </Grid>
-</ui:UiWindow>
+</ui:FluentWindow>
