--- a/ChronoKeep/UI/MainPages/AboutPage.xaml
+++ b/ChronoKeep/UI/MainPages/AboutPage.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiPage x:Class="Chronokeep.UI.MainPages.AboutPage"
+﻿<Page x:Class="Chronokeep.UI.MainPages.AboutPage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -9,7 +9,6 @@
         Title="AboutPage"
         xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         FlowDirection="LeftToRight"
-        Scrollable="True"
         >
     <StackPanel Margin="10,10,10,10">
         <TextBlock
@@ -45,12 +44,12 @@
             FontWeight="Medium"
             Text="Links"
             />
-        <ui:Hyperlink
+        <ui:HyperlinkButton
             Content="Project website on Github"
             Icon="Link24"
             NavigateUri="https://github.com/grecaun/chronokeep-windows"
             />
-        <ui:Hyperlink
+        <ui:HyperlinkButton
             Content="Latest release on Github"
             Icon="Link24"
             NavigateUri="https://github.com/grecaun/chronokeep-windows/releases/latest"
@@ -68,16 +67,16 @@
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
             <StackPanel Grid.Column="0" Margin="0,0,32,0">
-                <ui:Hyperlink Content="SQLite" NavigateUri="https://system.data.sqlite.org/" />
-                <ui:Hyperlink Content="wkhtmltopdf" NavigateUri="https://wkhtmltopdf.org/" />
+                <ui:HyperlinkButton Content="SQLite" NavigateUri="https://system.data.sqlite.org/" />
+                <ui:HyperlinkButton Content="wkhtmltopdf" NavigateUri="https://wkhtmltopdf.org/" />
             </StackPanel>
             <StackPanel Grid.Column="1" Margin="0,0,32,0">
-                <ui:Hyperlink Content="WPF UI" NavigateUri="https://github.com/lepoco/wpfui" />
-                <ui:Hyperlink Content="Ghostscript" NavigateUri="https://www.ghostscript.com/" />
+                <ui:HyperlinkButton Content="WPF UI" NavigateUri="https://github.com/lepoco/wpfui" />
+                <ui:HyperlinkButton Content="Ghostscript" NavigateUri="https://www.ghostscript.com/" />
             </StackPanel>
             <StackPanel Grid.Column="2">
-                <ui:Hyperlink Content="Extended WPF Toolkit" NavigateUri="https://github.com/xceedsoftware/wpftoolkit" />
-                <ui:Hyperlink Content="ClosedXML" NavigateUri="https://closedxml.github.io/ClosedXML/" />
+                <ui:HyperlinkButton Content="Extended WPF Toolkit" NavigateUri="https://github.com/xceedsoftware/wpftoolkit" />
+                <ui:HyperlinkButton Content="ClosedXML" NavigateUri="https://closedxml.github.io/ClosedXML/" />
             </StackPanel>
         </Grid>
         <TextBlock
@@ -86,10 +85,10 @@
             FontWeight="Medium"
             Text="Application Folders"
             />
-        <ui:Hyperlink
+        <ui:HyperlinkButton
             Click="OpenDataFolder_Click"
             Content="Data"
             Icon="Folder24"
             />
     </StackPanel>
-</ui:UiPage>
+</Page>
