--- a/ChronoKeep/UI/MainPages/AgeGroupsPage.xaml
+++ b/ChronoKeep/UI/MainPages/AgeGroupsPage.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiPage x:Class="Chronokeep.UI.MainPages.AgeGroupsPage"
+﻿<Page x:Class="Chronokeep.UI.MainPages.AgeGroupsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -45,4 +45,4 @@
             </StackPanel>
         </Grid>
     </Grid>
-</ui:UiPage>
+</Page>
