--- a/ChronoKeep/UI/MainPages/ChipAssigmentPage.xaml
+++ b/ChronoKeep/UI/MainPages/ChipAssigmentPage.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiPage x:Class="Chronokeep.UI.MainPages.ChipAssigmentPage"
+﻿<Page x:Class="Chronokeep.UI.MainPages.ChipAssigmentPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -306,4 +306,4 @@
             </StackPanel>
         </Grid>
     </Grid>
-</ui:UiPage>
+</Page>
