--- a/ChronoKeep/UI/MainPages/SegmentsPage.xaml
+++ b/ChronoKeep/UI/MainPages/SegmentsPage.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiPage x:Class="Chronokeep.UI.MainPages.SegmentsPage"
+﻿<Page x:Class="Chronokeep.UI.MainPages.SegmentsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -29,4 +29,4 @@
             </DockPanel>
         </Grid>
     </Grid>
-</ui:UiPage>
+</Page>
