--- a/ChronoKeep/UI/MainPages/SettingsPage.xaml
+++ b/ChronoKeep/UI/MainPages/SettingsPage.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiPage
+﻿<Page
       x:Class="Chronokeep.UI.MainPages.SettingsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -138,4 +138,4 @@
             </StackPanel>
         </Grid>
     </StackPanel>
-</ui:UiPage>
+</Page>
