--- a/ChronoKeep/UI/MainWindow.xaml
+++ b/ChronoKeep/UI/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiWindow
+﻿<ui:FluentWindow
         x:Class="Chronokeep.UI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -30,94 +30,83 @@
             Grid.ColumnSpan="2"
             Margin="42,0,0,0">
         </ui:TitleBar>
-        <ui:NavigationCompact
+        <ui:NavigationView
+            PaneDisplayMode="LeftFluent"
+            IsBackButtonVisible="Collapsed"
             x:Name="RootNavigation"
             Grid.Column="0"
-            Frame="{Binding ElementName=TheFrame, Mode=OneWay}"
-            MaxWidth="150"
             >
-            <ui:NavigationCompact.Items>
-                <ui:NavigationItem
+            <ui:NavigationView.MenuItems>
+                <ui:NavigationViewItem
                             Content="Dashboard"
-                            PageTag="dashboard"
                             Icon="Home24"
                             Click="DashboardButton_Click"
                             x:Name="dashboardButton"
                             />
-                <ui:NavigationItem
+                <ui:NavigationViewItem
                             Content="Timing"
-                            PageTag="timing"
                             Icon="ClipboardClock24"
                             Click="TimingButton_Click"
                             x:Name="timingButton"
                             />
-                <ui:NavigationItem
+                <ui:NavigationViewItem
                             Content="Announcer"
-                            PageTag="announcer"
                             Icon="AlertUrgent24"
                             Click="Announcer_Click"
                             x:Name="announcerButton"
                             />
-                <ui:NavigationItem
+                <ui:NavigationViewItem
                             Content="Participants"
-                            PageTag="participants"
                             Icon="Person24"
                             Click="ParticipantsButton_Click"
                             x:Name="participantsButton"
                             />
-                <ui:NavigationItem
+                <ui:NavigationViewItem
                             Content="Chips"
-                            PageTag="chips"
                             Icon="DeveloperBoard24"
                             Click="ChipsButton_Click"
                             x:Name="chipsButton"
                             />
-                <ui:NavigationItem
+                <ui:NavigationViewItem
                             Content="Locations"
-                            PageTag="locations"
                             Icon="Map24"
                             Click="LocationsButton_Click"
                             x:Name="locationsButton"
                             />
-                <ui:NavigationItem
+                <ui:NavigationViewItem
                             Content="Distances"
-                            PageTag="distances"
                             Icon="Ruler24"
                             Click="DistancesButton_Click"
                             x:Name="distancesButton"
                             />
-                <ui:NavigationItem
+                <ui:NavigationViewItem
                             Content="Segments"
-                            PageTag="segments"
                             Icon="Organization24"
                             Click="SegmentsButton_Click"
                             x:Name="segmentsButton"
                             />
-                <ui:NavigationItem
+                <ui:NavigationViewItem
                             Content="Age Groups"
-                            PageTag="age groups"
                             Icon="Trophy24"
                             Click="AgegroupsButton_Click"
                             x:Name="agegroupsButton"
                             />
-            </ui:NavigationCompact.Items>
-            <ui:NavigationCompact.Footer>
-                <ui:NavigationItem
+            </ui:NavigationView.MenuItems>
+            <ui:NavigationView.FooterMenuItems>
+                <ui:NavigationViewItem
                             Content="Settings"
-                            PageTag="settings"
                             Icon="Settings24"
                             Click="SettingsButton_Click"
                             x:Name="settingsButton"
                             />
-                <ui:NavigationItem
+                <ui:NavigationViewItem
                             Content="About"
-                            PageTag="about"
                             Icon="Info24"
                             Click="AboutButton_Click"
                             x:Name="aboutButton"
                             />
-            </ui:NavigationCompact.Footer>
-        </ui:NavigationCompact>
+            </ui:NavigationView.FooterMenuItems>
+        </ui:NavigationView>
         <Grid Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
@@ -130,13 +119,6 @@
                 CornerRadius="8,0,0,0">
                 <Frame x:Name="TheFrame" Grid.Row="1" Margin="6" />
             </Border>
-            <ui:Breadcrumb
-                    Grid.Row="0"
-                    Margin="56,5"
-                    HorizontalAlignment="Left"
-                    VerticalAlignment="Top"
-                    FontSize="28"
-                    Navigation="{Binding ElementName=RootNavigation, Mode=OneWay}" />
         </Grid>
     </Grid>
-</ui:UiWindow>
+</ui:FluentWindow>
