--- a/ChronoKeep/UI/Participants/ChangeMultiParticipantWindow.xaml
+++ b/ChronoKeep/UI/Participants/ChangeMultiParticipantWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiWindow x:Class="Chronokeep.UI.Participants.ChangeMultiParticipantWindow"
+﻿<ui:FluentWindow x:Class="Chronokeep.UI.Participants.ChangeMultiParticipantWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -33,4 +33,4 @@
             </Grid>
         </StackPanel>
     </Grid>
-</ui:UiWindow>
+</ui:FluentWindow>
