--- a/ChronoKeep/UI/Timing/EditRawReadsWindow.xaml
+++ b/ChronoKeep/UI/Timing/EditRawReadsWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiWindow x:Class="Chronokeep.UI.Timing.EditRawReadsWindow"
+﻿<ui:FluentWindow x:Class="Chronokeep.UI.Timing.EditRawReadsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -95,4 +95,4 @@
             </Grid>
         </Grid>
     </Grid>
-</ui:UiWindow>
+</ui:FluentWindow>
