--- a/ChronoKeep/UI/Timing/Import/ImportLogPage1.xaml
+++ b/ChronoKeep/UI/Timing/Import/ImportLogPage1.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiPage x:Class="Chronokeep.UI.Timing.Import.ImportLogPage1"
+﻿<Page x:Class="Chronokeep.UI.Timing.Import.ImportLogPage1"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -26,4 +26,4 @@
             <Button Name="CancelButton" Content="Cancel" Width="120" Height="35" FontSize="14" Margin="5,10,10,10" VerticalContentAlignment="Center" HorizontalAlignment="Left" Grid.Column="1" Click="CancelButton_Click" />
         </Grid>
     </StackPanel>
-</ui:UiPage>
+</Page>
