--- a/ChronoKeep/UI/Timing/ManualEntryWindow.xaml
+++ b/ChronoKeep/UI/Timing/ManualEntryWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiWindow x:Class="Chronokeep.UI.Timing.ManualEntryWindow"
+﻿<ui:FluentWindow x:Class="Chronokeep.UI.Timing.ManualEntryWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:s="clr-namespace:System;assembly=mscorlib"
@@ -52,4 +52,4 @@
             </StackPanel>
         </StackPanel>
     </Grid>
-</ui:UiWindow>
+</ui:FluentWindow>
