--- a/ChronoKeep/UI/Timing/PrintPage.xaml
+++ b/ChronoKeep/UI/Timing/PrintPage.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiPage x:Class="Chronokeep.UI.Timing.PrintPage"
+﻿<Page x:Class="Chronokeep.UI.Timing.PrintPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -39,4 +39,4 @@
             </DockPanel>
         </StackPanel>
     </ScrollViewer>
-</ui:UiPage>
+</Page>
