--- a/ChronoKeep/UI/Timing/ReaderSettings/RFIDSettings.xaml
+++ b/ChronoKeep/UI/Timing/ReaderSettings/RFIDSettings.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiWindow x:Class="Chronokeep.UI.Timing.ReaderSettings.RFIDSettings"
+﻿<ui:FluentWindow x:Class="Chronokeep.UI.Timing.ReaderSettings.RFIDSettings"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -12,7 +12,7 @@
         WindowBackdropType="Mica"
         WindowCornerPreference="Round"
         WindowStartupLocation="CenterScreen"
-        Closed="UiWindow_Closed"
+        Closed="Window_Closed"
         Height="500"
         Width="300"
         SizeToContent="WidthAndHeight"
@@ -300,4 +300,4 @@
             </StackPanel>
         </StackPanel>
     </Grid>
-</ui:UiWindow>
+</ui:FluentWindow>
