--- a/ChronoKeep/UI/Timing/RewindWindow.xaml
+++ b/ChronoKeep/UI/Timing/RewindWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiWindow x:Class="Chronokeep.UI.Timing.RewindWindow"
+﻿<ui:FluentWindow x:Class="Chronokeep.UI.Timing.RewindWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -62,4 +62,4 @@
             </StackPanel>
         </xctf:BusyIndicator>
     </Grid>
-</ui:UiWindow>
+</ui:FluentWindow>
