--- a/ChronoKeep/UI/Timing/SetTimeWindow.xaml
+++ b/ChronoKeep/UI/Timing/SetTimeWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiWindow x:Class="Chronokeep.UI.Timing.SetTimeWindow"
+﻿<ui:FluentWindow x:Class="Chronokeep.UI.Timing.SetTimeWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -51,4 +51,4 @@
             </Grid>
         </StackPanel>
     </Grid>
-</ui:UiWindow>
+</ui:FluentWindow>
