--- a/ChronoKeep/UI/Timing/TimingRawReadsPage.xaml
+++ b/ChronoKeep/UI/Timing/TimingRawReadsPage.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiPage x:Class="Chronokeep.UI.Timing.TimingRawReadsPage"
+﻿<Page x:Class="Chronokeep.UI.Timing.TimingRawReadsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -99,4 +99,4 @@
             <Button Name="DoneButton" Content="Done" Height="35" FontSize="16" Width="120" Margin="5,5,5,5" Click="DoneButton_Click"/>
         </DockPanel>
     </Grid>
-</ui:UiPage>
+</Page>
