--- a/ChronoKeep/UI/Timing/TimingResultsPage.xaml
+++ b/ChronoKeep/UI/Timing/TimingResultsPage.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiPage x:Class="Chronokeep.UI.Timing.TimingResultsPage"
+﻿<Page x:Class="Chronokeep.UI.Timing.TimingResultsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -111,4 +111,4 @@
             <TextBlock Grid.Column="14" Margin="4,4" Text="Segment"/>
         </Grid>
     </Grid>
-</ui:UiPage>
+</Page>
