--- a/ChronoKeep/UI/Timing/WaveWindow.xaml
+++ b/ChronoKeep/UI/Timing/WaveWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiWindow x:Class="Chronokeep.UI.Timing.WaveWindow"
+﻿<ui:FluentWindow x:Class="Chronokeep.UI.Timing.WaveWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -60,4 +60,4 @@
             </DockPanel>
         </Grid>
     </Grid>
-</ui:UiWindow>
+</ui:FluentWindow>
