--- a/ChronoKeep/UI/UHF RFID Reader/ChipPersonWindow.xaml
+++ b/ChronoKeep/UI/UHF RFID Reader/ChipPersonWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiWindow x:Class="Chronokeep.ChipPersonWindow"
+﻿<ui:FluentWindow x:Class="Chronokeep.ChipPersonWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -61,4 +61,4 @@
             </StackPanel>
         </Grid>
     </Grid>
-</ui:UiWindow>
+</ui:FluentWindow>
