--- a/ChronoKeep/UI/UHF RFID Reader/ChipReaderWindow.xaml
+++ b/ChronoKeep/UI/UHF RFID Reader/ChipReaderWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiWindow x:Class="Chronokeep.ChipReaderWindow"
+﻿<ui:FluentWindow x:Class="Chronokeep.ChipReaderWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -83,4 +83,4 @@
             </StackPanel>
         </Grid>
     </Grid>
-</ui:UiWindow>
+</ui:FluentWindow>
