--- a/ChronoKeep/UI/UIObjects/DialogBox.xaml
+++ b/ChronoKeep/UI/UIObjects/DialogBox.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiWindow x:Class="Chronokeep.UI.UIObjects.DialogBox"
+﻿<ui:FluentWindow x:Class="Chronokeep.UI.UIObjects.DialogBox"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -33,4 +33,4 @@
             <Button Grid.Column="1" x:Name="RightButton" Content="No" Height="35" Margin="5,15,15,15" HorizontalAlignment="Stretch" />
         </Grid>
     </Grid>
-</ui:UiWindow>
+</ui:FluentWindow>
