--- a/ChronoKeep/Updates/DownloadWindow.xaml
+++ b/ChronoKeep/Updates/DownloadWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiWindow x:Class="Chronokeep.Updates.DownloadWindow"
+﻿<ui:FluentWindow x:Class="Chronokeep.Updates.DownloadWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -35,4 +35,4 @@
             </DockPanel>
         </StackPanel>
     </Grid>
-</ui:UiWindow>
+</ui:FluentWindow>
