--- a/ChronoKeep/UI/MainWindow.xaml
+++ b/ChronoKeep/UI/MainWindow.xaml
@@ -28,7 +28,7 @@
             Grid.Row="0"
             Grid.Column="0"
             Grid.ColumnSpan="2"
-            Margin="42,0,0,0">
+            Margin="42,-3,0,0">
         </ui:TitleBar>
         <ui:NavigationCompact
             x:Name="RootNavigation"
@@ -38,6 +38,7 @@
             >
             <ui:NavigationCompact.Items>
                 <ui:NavigationItem
+                            Margin="0,-4,0,0"
                             Content="Dashboard"
                             PageTag="dashboard"
                             Icon="Home24"
@@ -120,7 +121,7 @@
         </ui:NavigationCompact>
         <Grid Grid.Column="1">
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
+                <RowDefinition Height="42" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <Border
@@ -132,7 +133,7 @@
             </Border>
             <ui:Breadcrumb
                     Grid.Row="0"
-                    Margin="56,5"
+                    Margin="50,5"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Top"
                     FontSize="28"
